@@ -475,6 +475,9 @@ Working version
   (Sébastien Hinderer, review by Xavier Leroy, Nicolás Ojeda Bär and
   Hugo Heuzard)
 
+- #12012: move calls to Typetexp.TyVarEnv.reset inside with_local_level etc.
+  (Jacques Garrigue and Takafumi Saikawa, review by Gabriel Scherer)
+
 ### Build system:
 
 - #11590: Allow installing to a destination path containing spaces.
